--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/db_task_maneger?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_task_manager?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=8081
+
+spring.liquibase.change-log=classpath:/liquibase/db_task_manager.db.changelog-main.yaml
+spring.liquibase.enabled=true
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.globally_quoted_identifiers = true
